--- a/html/pufferfish_game3_1.html
+++ b/html/pufferfish_game3_1.html
@@ -16,7 +16,7 @@
 		<h3 class="result_title prize">100포인트 당첨!</h3>
 		<p class="result_cont">오늘 총 <span>200 포인트</span>를 받았어요.</p>
 		<button type="button" class="next_btn">포인트 계속 받기</button>
-		<h5 class="precaution_title">유의사항</h5>
+		<div class="precaution_title">유의사항</div>
 		<ul class="precaution_conts">
 			<li>적립 완료까지는 다소 시간이 소요될 수 있습니다.</li>
 			<li>당첨된 포인트는 수령일로부터 12개월간 유효하며, 유효기간 경과 시
