--- a/html/pufferfish_game_form.html
+++ b/html/pufferfish_game_form.html
@@ -12,22 +12,6 @@
 </head>
 
 <body>
-	<div class="wrap dim">
-		<h3 class="result_title prize">경품 당첨 축하해요!</h3>
-		<p class="result_cont">경품 당첨 선물 <span>금 1돈</span> 받았어요.</p>
-		<button type="button" class="next_btn">경품 수령 받기</button>
-		<h5 class="precaution_title">유의사항</h5>
-		<ul class="precaution_conts">
-			<li>적립 완료까지는 다소 시간이 소요될 수 있습니다.</li>
-			<li>당첨된 포인트는 수령일로부터 12개월간 유효하며, 유효기간 경과 시
-				자동 소멸됩니다.</li>
-			<li>포인트는 정상적인 게임 참여를 통해 적립할 수 있으며, 부정한 방법으로
-				적립된 포인트는 사전 통보 없이 회수될 수 있습니다.</li>
-			<li>본 서비스는 인라이플에서 제공하며, 사정에 따라 사전 고지 없이 변경
-				또는 종료 될 수 있습니다.</li>
-			<li>서비스와 관련된 문의사항은 메일로 문의해주세요.<br>pommision@enliple.com</li>
-		</ul>
-	</div>
 	<div class="form_modal_wrap">
 		<button type="button" class="form_close_btn" aria-label="닫기"></button>
 		<div class="form_wrap">
@@ -42,19 +26,19 @@
 					<input type="text" id="user_name" name="user_name">
 				</div>
 				<div>
-					<label for="user_birth">생년월일<span>*</span></label></label>
+					<label for="user_birth">생년월일<span>*</span></label>
 					<input type="text" id="user_birth" name="user_birth">
 				</div>
 				<div>
-					<label for="user_tel">연락처<span>*</span></label></label>
+					<label for="user_tel">연락처<span>*</span></label>
 					<input type="tel" id="user_tel" name="user_tel">
 				</div>
 				<div>
-					<label for="user_email">메일<span>*</span></label></label>
+					<label for="user_email">메일<span>*</span></label>
 					<input type="email" id="user_email" name="user_email">
 				</div>
 				<div>
-					<label>수령주소<span>*</span></label></label>
+					<label>수령주소<span>*</span></label>
 					<div class="flex">
 						<input type="text" id="user_zipcode" name="user_zipcode">
 						<button type="button" class="adress_btn">주소검색</button>
@@ -67,7 +51,7 @@
 					</div>
 				</div>
 				<div>
-					<label for="user_registration_front">주민등록번호<span>*</span></label></label>
+					<label for="user_registration_front">주민등록번호<span>*</span></label>
 					<div class="flex">
 						<input type="text" id="user_registration_front" name="user_registration_front" maxlength="6">
 						<span class="line">-</span>
