--- a/html/pufferfish_game3_2.html
+++ b/html/pufferfish_game3_2.html
@@ -16,7 +16,7 @@
 		<h3 class="result_title prize">경품 당첨 축하해요!</h3>
 		<p class="result_cont">경품 당첨 선물 <span>금 1돈</span> 받았어요.</p>
 		<button type="button" class="next_btn">경품 수령 받기</button>
-		<h5 class="precaution_title">유의사항</h5>
+		<div class="precaution_title">유의사항</div>
 		<ul class="precaution_conts">
 			<li>적립 완료까지는 다소 시간이 소요될 수 있습니다.</li>
 			<li>당첨된 포인트는 수령일로부터 12개월간 유효하며, 유효기간 경과 시
