--- a/html/pufferfish_game3_3.html
+++ b/html/pufferfish_game3_3.html
@@ -18,7 +18,7 @@
 		</div>
 		<p class="result_cont">오늘 총 <span>200 포인트</span>를 받았어요.</p>
 		<button type="button" class="next_btn">다시 포인트 받기 도전!</button>
-		<h5 class="precaution_title">유의사항</h5>
+		<div class="precaution_title">유의사항</div>
 		<ul class="precaution_conts">
 			<li>적립 완료까지는 다소 시간이 소요될 수 있습니다.</li>
 			<li>당첨된 포인트는 수령일로부터 12개월간 유효하며, 유효기간 경과 시
