--- a/html/pufferfish_game3_2.html
+++ b/html/pufferfish_game3_2.html
@@ -8,12 +8,14 @@
 	<link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="../img/favicon.ico" type="image/x-icon">
 	<script src="../js/jquery-3.5.1.min.js"></script>
+	<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 	<title>복어게임</title>
 </head>
 
 <body>
 	<div class="wrap dim">
-		<h3 class="result_title prize">경품 당첨 축하해요!</h3>
+		<lottie-player class="lottie" src="../json/fishcoin.json" autoplay loop></lottie-player>
+		<h3 class="result_title">경품 당첨 축하해요!</h3>
 		<p class="result_cont">경품 당첨 선물 <span>금 1돈</span> 받았어요.</p>
 		<button type="button" class="next_btn">경품 수령 받기</button>
 		<div class="precaution_title">유의사항</div>
